[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure_webhook"
version = "1.0.0"
description = "Secure Webhook for Home Assistant"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "homeassistant>=2024.1.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy"
]

[tool.setuptools]
packages = ["custom_components.secure_webhook"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Inheritance class HomeAssistantApplication from web.Application is discouraged:DeprecationWarning"
]
